@@ -28,6 +28,7 @@ check_login ();
 $styleError = "background:url(\"../images/err.png\") no-repeat scroll 0 0 transparent; padding:4px 1px 6px 30px; color:#CC0000;";
 
 $file = get_parameter('file', null);
+$file = base64_decode($file);
 $chunks = explode('/', $file); 
 $nameFile = end($chunks);
 
